--- a/src/index.css
+++ b/src/index.css
@@ -36,9 +36,22 @@
   }
 }
 
-body {
+/* body {
   background-color: #ffffff;
   animation: change-background infinite linear;
+} */
+ /* styles.css */
+#home {
+  background-image: url('path/to/your/image.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .wrapper {
